--- a/blog.html
+++ b/blog.html
@@ -189,6 +189,7 @@ series2.columns.template.strokeWidth = 2;
 		<script src="bower_components/owl-carousel2/dist/owl.carousel.min.js"></script>
 		<script src="dist/js/bootaide.min.js"></script>
         <script type="text/javascript" src="dist/js/jquery.onScreenKeyboard.min.js"></script>
+<script type="text/javascript" src="dist/js/jquery.onScreenKeyboardEng.min.js"></script>
 <script>
     $('.field_search').onScreenKeyboard({
         rewireReturn: 'submit',
