--- a/gallery.html
+++ b/gallery.html
@@ -113,6 +113,11 @@
 		        <h3 class="text-info"> Alokito Bangladesh </h3>
 				      </a>
 				       <div class="line line-lg w-3x b-b b-danger m-auto"></div>
+ <a href="http://epaper.ajkerpatrika.com/" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/ajkerpatrika.jpg" alt="" class="img-full wrapper-xs bg-white>
+			                                                         
+		        <h3 class="text-info"> Ajkerpatrika </h3>
+				      </a>
+				       <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 				        </div>
 					     </div></div>
 		    </div>
