--- a/gallery.html
+++ b/gallery.html
@@ -132,7 +132,12 @@
 		        <h3 class="text-info"> Ajkerpatrika </h3>
 				      </a>
 				       <div class="line line-lg w-3x b-b b-danger m-auto"></div>
-      </div>
+
+<a href="http://epaper.nayashatabdi24.com/" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/nayashatabdi24.jpg" alt="" class="img-full wrapper-xs bg-white>
+			                                                         
+		        <h3 class="text-info"> Naya Shatabdi </h3>
+				      </a>
+				       <div class="line line-lg w-3x b-b b-danger m-auto"></div>      </div>
     </div>
   </div>
 </div				     
