--- a/gallery.html
+++ b/gallery.html
@@ -41,7 +41,7 @@
     <div class="card">
       <div class="card-body">
         <h5 class="card-title">Special title treatment</h5>
-        <p class="card-text"></p>
+        <p class="card-text">
         
 
    <a href="https://prothomalo.com" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/prothomalo.jpg" alt="" class="img-full wrapper-xs bg-white>
@@ -84,6 +84,7 @@
 		        <h3 class="text-info"> Bonik Barta</h3>
 				      </a>
 				       <div class="line line-lg w-3x b-b b-danger m-auto"></div>
+</p>
       </div>
     </div>
   </div>
@@ -91,7 +92,7 @@
     <div class="card">
       <div class="card-body">
         <h5 class="card-title">Special title treatment</h5>
-        <p class="card-text"></p>
+        <p class="card-text">
   <a href="https://dainikamadershomoy.com" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/dainikamadershomoy.com.jpg" alt="" class="img-full wrapper-xs bg-white>
 			                                                         
 		        <h3 class="text-info"> Dainik Amader Somoy</h3>
@@ -144,6 +145,7 @@
 		        <h3 class="text-info">  Hyderabad Timesgroup </h3>
 				      </a>
 				       <div class="line line-lg w-3x b-b b-danger m-auto"></div> 
+</p>
      </div>
     </div>
   </div>
