--- a/gallery.html
+++ b/gallery.html
@@ -37,7 +37,7 @@
 </div>
 
 <div class="row">
-  <div class="col-sm-6">
+  <div class="col-sm-6 col-sm-offset-2 text-center p-v m-v-xl">
     <div class="card">
       <div class="card-body">
         <h5 class="card-title">Special title treatment</h5>
@@ -88,7 +88,7 @@
       </div>
     </div>
   </div>
-  <div class="col-sm-6">
+  <div class="col-sm-6 col-sm-offset-2 text-center p-v m-v-xl">
     <div class="card">
       <div class="card-body">
         <h5 class="card-title">Special title treatment</h5>
