--- a/gallery.html
+++ b/gallery.html
@@ -140,7 +140,7 @@
 				      </a>
 				       <div class="line line-lg w-3x b-b b-danger m-auto"></div> 
 
-<a href="http://epaper.timesgroup.com/" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/timesgroup.jpg" alt="" class="img-full wrapper-xs bg-white>
+<a href="http://epaper.timesgroup.com/" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/hyderabadtimes.jpg" alt="" class="img-full wrapper-xs bg-white>
 			                                                         
 		        <h3 class="text-info">  Hyderabad Timesgroup </h3>
 				      </a>
