--- a/gallery.html
+++ b/gallery.html
@@ -40,7 +40,7 @@
   <div class="col-sm-6 col-sm-offset-2 text-center p-v m-v-xl">
     <div class="card">
       <div class="card-body">
-        <h5 class="card-title">Special title treatment</h5>
+        <h5 class="card-title"> Newspaper Segment One</h5><br>
         <p class="card-text">
         
 
@@ -91,7 +91,7 @@
   <div class="col-sm-6 col-sm-offset-2 text-center p-v m-v-xl">
     <div class="card">
       <div class="card-body">
-        <h5 class="card-title">Special title treatment</h5>
+        <h5 class="card-title">Newspaper Segment Two</h5><br>
         <p class="card-text">
   <a href="https://dainikamadershomoy.com" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/dainikamadershomoy.com.jpg" alt="" class="img-full wrapper-xs bg-white>
 			                                                         
