--- a/gallery.html
+++ b/gallery.html
@@ -36,7 +36,7 @@
 </div>
 
 <div class="row">
-  <div class="col-sm-6 col-sm-offset-2 text-center p-v m-v-xl">
+  <div class="col-sm-4 col-sm-offset-2 text-center p-v m-v-xl">
     <div class="card">
       <div class="card-body">
         <h5 class="card-title"> Newspaper Segment One</h5><br>
@@ -87,7 +87,10 @@
       </div>
     </div>
   </div>
-  <div class="col-sm-6 col-sm-offset-2 text-center p-v m-v-xl">
+
+
+
+<div class="col-sm-4 col-sm-offset-2 text-center p-v m-v-xl">
     <div class="card">
       <div class="card-body">
         <h5 class="card-title">Newspaper Segment Two</h5><br>
@@ -97,6 +100,16 @@
 		        <h3 class="text-info"> Dainik Amader Somoy</h3>
 				      </a>
 				       <div class="line line-lg w-3x b-b b-danger m-auto"></div>
+</p>
+</div>
+</div>
+</div>
+
+  <div class="col-sm-4 col-sm-offset-2 text-center p-v m-v-xl">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Newspaper Segment Three</h5><br>
+        <p class="card-text">
 				         <a href="https://samakal.net" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/samakal.net.jpg" alt="" class="img-full wrapper-xs bg-white>
 			                                                         
 		        <h3 class="text-info"> Samakal </h3>
