--- a/gallery.html
+++ b/gallery.html
@@ -36,7 +36,7 @@
 </div>
 
 <div class="row">
-  <div class="col-sm-4 col-sm-offset-2 text-center p-v m-v-xl">
+  <div class="col-sm-4 text-center p-v m-v-xl">
     <div class="card">
       <div class="card-body">
         <h5 class="card-title"> Newspaper Segment One</h5><br>
