--- a/gallery.html
+++ b/gallery.html
@@ -87,7 +87,7 @@
 
 
 
-<div class="col-sm-4 col-sm-offset-2 text-center p-v m-v-xl">
+<div class="col-sm-4 text-center p-v m-v-xl">
     <div class="card">
       <div class="card-body">
         <h5 class="card-title">Newspaper Segment Two</h5><br>
@@ -131,7 +131,7 @@
 </div>
 </div>
 
-  <div class="col-sm-4 col-sm-offset-2 text-center p-v m-v-xl">
+  <div class="col-sm-4 text-center p-v m-v-xl">
     <div class="card">
       <div class="card-body">
         <h5 class="card-title">Newspaper Segment Three</h5><br>
