--- a/index.html
+++ b/index.html
@@ -43,8 +43,14 @@
                                 <div class="b-l b-2x p-l-xl m-b-lg">
 											<div class="m-b-xl text-center p-v m-v-xl"> 
                               <a class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/samina.jpg" alt="Musammat Samina" class="img-full img-circle wrapper-xs bg-white"> </a>
-			                                                         
-		        <h3 class="text-info">আলহাজ্ব মোঃ আব্দুল খালেক এবং মিসেস সুফিয়া বেগম,বাড়ি ৩৫, রোড ০৩, ব্লক সি, সেকশন ১২, পল্লবী, ঢাকা ১২১৬  </h3>
+			         <span class="m-b-xl text-center p-v m-v-xl"> 
+    <a href="#" class="btn btn-primary"> Best of 60es </a>
+<a href="#" class="btn btn-info"> Best of 70es </a>
+</span>
+                     
+		        <h3 class="text-info">🎓 আলহাজ্ব মোঃ আব্দুল খালেক এবং মিসেস সুফিয়া বেগম,বাড়ি ৩৫, রোড ০৩, ব্লক সি, সেকশন ১২, পল্লবী, ঢাকা ১২১৬।<br> 
+🎓 <span class="text-primary">Al-hajj Md. Abdul Khalek, Mst. Sufia Begum, House 35(1st floor), Road 03, Block C, Section 12, Mirpur, Pallabi, Dhaka 1216, Bangladesh.</span>
+</h3>
 		        <p class=""></p>
 		        <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 		      </div
