--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 			         <span class="m-b-xl text-center p-v m-v-xl"> 
     <a href="#" class="btn btn-primary"> Best of 60es </a>
 <a href="#" class="btn btn-info"> Best of 70es </a>
+<a href="#" class="btn btn-danger"> Best of 80es </a>
+<a href="#" class="btn btn-dark"> Best of 90es </a>
 </span>
                      
 		        <h3 class="text-info">🎓 আলহাজ্ব মোঃ আব্দুল খালেক এবং মিসেস সুফিয়া বেগম,বাড়ি ৩৫, রোড ০৩, ব্লক সি, সেকশন ১২, পল্লবী, ঢাকা ১২১৬।<br> 
