--- a/index.html
+++ b/index.html
@@ -47,13 +47,16 @@
     <a href="#" class="btn btn-primary"> Best of 60es </a>
 <a href="#" class="btn btn-info"> Best of 70es </a>
 <a href="#" class="btn btn-danger"> Best of 80es </a>
-<a href="#" class="btn btn-warning"> Best of 90es </a>
 </span>
                      
 		        <h3 class="text-info">🎓 আলহাজ্ব মোঃ আব্দুল খালেক এবং মিসেস সুফিয়া বেগম,বাড়ি ৩৫, রোড ০৩, ব্লক সি, সেকশন ১২, পল্লবী, ঢাকা ১২১৬।<br> 
 🎓 <span class="text-primary">Al-hajj Md. Abdul Khalek, Mst. Sufia Begum, House 35(1st floor), Road 03, Block C, Section 12, Mirpur, Pallabi, Dhaka 1216, Bangladesh.</span>
 </h3>
-		        <p class=""></p>
+		        <span class="m-b-xl text-center p-v m-v-xl"> 
+    <a href="#" class="btn btn-danger"> Best of 90es </a>
+<a href="#" class="btn btn-info"> Best of older  </a>
+<a href="#" class="btn btn-success"> Best of newborn </a>
+</span>
 		        <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 		      </div
 				<div class="col-sm-8 col-sm-offset-2">
