--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 🎓 <span class="text-primary">Al-hajj Md. Abdul Khalek, Mst. Sufia Begum, House 35(1st floor), Road 03, Block C, Section 12, Mirpur, Pallabi, Dhaka 1216, Bangladesh.</span>
 </h3>
 		        <span class="m-b-xl text-center p-v m-v-xl"> 
-    <a href="#" class="btn btn-danger"> Best of 90es </a>
-<a href="#" class="btn btn-info"> Best of older  </a>
+    <a href="#" class="btn btn-warning"> Best of 90es </a>
+<a href="#" class="btn btn-danger"> Best of older  </a>
 <a href="#" class="btn btn-success"> Best of newborn </a>
 </span>
 		        <div class="line line-lg w-3x b-b b-danger m-auto"></div>
