--- a/gallery.html
+++ b/gallery.html
@@ -164,6 +164,12 @@
 		        <h3 class="text-info">  Hyderabad Timesgroup </h3>
 				      </a>
 				       <div class="line line-lg w-3x b-b b-danger m-auto"></div> 
+
+<a href="http://epaper.sangbadpratidin.in/" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/sangbadpratidin.jpg" alt="" class="img-full wrapper-xs bg-white>
+			                                                         
+		        <h3 class="text-info">  Sangbad Pratidin</h3>
+				      </a>
+				       <div class="line line-lg w-3x b-b b-danger m-auto"></div> 
 </p>
      </div>
     </div>
