--- a/gallery.html
+++ b/gallery.html
@@ -183,7 +183,7 @@
 
 
 <div class="col-sm-8 col-sm-offset-2 text-center p-v m-v-xl">
-		      	<img src="dist/img/sisimpurs.jpg" alt="" class="img-full wrapper-xs bg-whitclass img-fluid">	
+		      	<img src="dist/img/sisimpurs.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
 	        <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 </div>	
 
