--- a/gallery.html
+++ b/gallery.html
@@ -237,7 +237,7 @@
 
 
 <div class="col-sm-8 col-sm-offset-2 text-center p-v m-v-xl">
-		      	<img src="imgs/shajg.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
+		      	<div class="prayer-times" >	</div>
 	        <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 </div>	
 
@@ -312,8 +312,13 @@
 		<script src="bower_components/headroom.js/dist/headroom.min.js"></script> 
 		
 		<script src="dist/js/bootaide.min.js"></script>
+<script src="jquery.prayer.times.min.js"></script>
 <script>
-      function addHTML() {
+
+
+$('.prayer-times').prayerTimes();
+
+    function addHTML() {
          var el, i, domEl, fileName, xmlHttp;
          
          /*Iterate all DOM*/
