--- a/gallery.html
+++ b/gallery.html
@@ -312,7 +312,7 @@
 		<script src="bower_components/headroom.js/dist/headroom.min.js"></script> 
 		
 		<script src="dist/js/bootaide.min.js"></script>
-<script src="jquery.prayer.times.min.js"></script>
+<script src="dist/js/jquery.prayer.times.min.js"></script>
 <script>
 
 
