--- a/gallery.html
+++ b/gallery.html
@@ -15,7 +15,25 @@
 		<link rel="stylesheet" href="dist/css/bootaide.min.css" />
 <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 <link rel="stylesheet" href="https://kit.fontawesome.com/4ff5cc0e27.css" crossorigin="anonymous">
-    
+ <style>
+ table {
+ margin: auto;
+ border-collapse: collapse;
+ width: 50%;
+ margin-top: 20px;
+ border: 2px solid #4CAF50;
+ }
+ th, td {
+ border: 1px solid #ddd;
+ padding: 8px;
+ text-align: center;
+ font-weight: bold;
+ color: #4CAF50;
+ }
+ th {
+ background-color: #f2f2f2;
+ }
+ </style>
 	</head>
 	<body>
 		<!--[if lt IE 10]>
