--- a/gallery.html
+++ b/gallery.html
@@ -16,7 +16,7 @@
 <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 <link rel="stylesheet" href="https://kit.fontawesome.com/4ff5cc0e27.css" crossorigin="anonymous">
  <style>
- table {
+.prayer > table {
  margin: auto;
  border-collapse: collapse;
  width: 50%;
@@ -263,7 +263,7 @@
 
 
 <div class="col-sm-8 col-sm-offset-2 text-center p-v m-v-xl">
-		      	<div class="prayer-times" >	
+		      	<div class="prayer" >	
 
 
 <h1>مواقيت الصلاة</h1>
