--- a/about.html
+++ b/about.html
@@ -19,6 +19,21 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/assets/owl.theme.default.min.css">
 <style type="text/css">
+
+
+#container {
+    height: 500px;
+    min-width: 310px;
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.loading {
+    margin-top: 10em;
+    text-align: center;
+    color: gray;
+}
+
 /* Equal Heights for OwlCarousel 2 */
 
 .owl-carousel {
@@ -71,6 +86,7 @@
 		    </div>
 		  </div>
 		</section>
+
 <section class="p-v-xl bg-light">
 <nav class="navbar navbar-default">
 	<div class="container-fluid">
@@ -181,17 +197,12 @@
 		</section>
 
 	<section class="p-v-xl bg-light">
-		  <div class="container">
-		    <div class="row">
-		      <div class="col-sm-8 col-sm-offset-2 text-center p-v m-v-xl">
-		      	<div id="ochart"></div>
-		        <div class="line line-lg w-3x b-b b-danger m-auto"></div>
-		      </div>			
-				  
-		    </div>
+		  <div class="container" id="container">
+		    
 		  </div>
 		</section>
 </section>
+
         <section class="separator">
 			<div class="decor-svg">
 				<svg class="decor" height="100%" preserveAspectRatio="none" version="1.1" viewBox="0 0 100 100" width="100%" xmlns="http://www.w3.org/2000/svg">
@@ -218,7 +229,14 @@
 		<script src="bower_components/headroom.js/dist/headroom.min.js"></script> 
 		<script src="bower_components/owl-carousel2/dist/owl.carousel.min.js"></script>
 		<script src="dist/js/bootaide.min.js"></script>
+
+<script src="https: //code . highcharts. com/
+maps/highmaps. js"></script>
+<script src="https://code . highcharts. com/
+maps/modules /exporting.js"></script>
+
 <script src="dist/js/ochart.js"></script>
+
 <script>
       function addHTML() {
          var el, i, domEl, fileName, xmlHttp;
