--- a/gallery.html
+++ b/gallery.html
@@ -241,7 +241,7 @@
 
 <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 
-<a href="https://youtube.com/@shykhseraj" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/youtube.jpg" alt="" class="img-full wrapper-xs bg-white>
+<a href="https://youtube.com/@shykhseraj" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/youtube.png" alt="" class="img-full wrapper-xs bg-white>
 			                                                         
 		        <h3 class="text-info"> Shykh Seraj </h3>
 				      </a>
