--- a/gallery.html
+++ b/gallery.html
@@ -215,6 +215,12 @@
 		        <h3 class="text-info">E - Ittefaq </h3>
 				      </a>						
 		        <div class="line line-lg w-3x b-b b-danger m-auto"></div>
+
+ <a href="https://esharebiz.net" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/sharebiz.net.jpg" alt="" class="img-full wrapper-xs bg-white>
+			                                                         
+		        <h3 class="text-info"> E-ShareBiz (dot) Net </h3>
+				      </a>
+				       <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 </p>
      </div>
     </div>
