--- a/gallery.html
+++ b/gallery.html
@@ -317,6 +317,12 @@
 
 <div class="row">
 
+
+<div class="col-sm-8 col-sm-offset-2 text-center p-v m-v-xl">
+		      	<img src="imgs/s2.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
+	        <div class="line line-lg w-3x b-b b-danger m-auto"></div>
+</div>	
+
   <div class="col-sm-4 text-center p-v m-v-xl">
     <div class="card">
       <div class="card-body">
