--- a/gallery.html
+++ b/gallery.html
@@ -237,7 +237,7 @@
 <div class="row">
 
 
-<div class="col-sm-12 col-sm-offset-2 text-center p-v m-v-xl">
+<div class="col-sm-12 text-center p-v m-v-xl">
 		      	<img src="imgs/s3.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
 	        <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 </div>	
@@ -318,7 +318,7 @@
 <div class="row">
 
 
-<div class="col-sm-12 col-sm-offset-2 text-center p-v m-v-xl">
+<div class="col-sm-12 text-center p-v m-v-xl">
 		      	<img src="imgs/s2.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
 	        <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 </div>	
