--- a/portfolio.html
+++ b/portfolio.html
@@ -66,7 +66,44 @@
 				<svg class="decor" height="100%" preserveAspectRatio="none" version="1.1" viewBox="0 0 100 100" width="100%" xmlns="http://www.w3.org/2000/svg">
 </div>
 		</section>
-	
+
+<section class="bg-white">
+<div class="col-sm-3">
+<figure class="figure">
+  <img src="imgs/e61.jpg" class="figure-img img-fluid rounded" alt="...">
+  <figcaption class="figure-caption">Prime Minister Sheikh Hasina presided over the meeting. A meeting of the National Moon Sighting Committee is scheduled to be held this evening to determine the date of the moon sighting of the holy month of Zilhaj and the date of Eid-ul-Adha. </figcaption>
+</figure>
+</div>
+
+<div class="col-sm-3">
+<figure class="figure">
+<figcaption class="figure-caption">Prime Minister Sheikh Hasina presided over the meeting. A meeting of the National Moon Sighting Committee is scheduled to be held this evening to determine the date of the moon sighting of the holy month of Zilhaj and the date of Eid-ul-Adha. </figcaption>
+  <img src="imgs/e62.jpg" class="figure-img img-fluid rounded" alt="...">
+</figure>
+</div>
+
+<div class="col-sm-3">
+<figure class="figure">
+  <img src="imgs/e63.jpg" class="figure-img img-fluid rounded" alt="...">
+  <figcaption class="figure-caption">Prime Minister Sheikh Hasina presided over the meeting. A meeting of the National Moon Sighting Committee is scheduled to be held this evening to determine the date of the moon sighting of the holy month of Zilhaj and the date of Eid-ul-Adha. </figcaption>
+</figure>
+</div>
+
+
+<div class="col-sm-3">
+<figure class="figure">
+<figcaption class="figure-caption">Prime Minister Sheikh Hasina presided over the meeting. A meeting of the National Moon Sighting Committee is scheduled to be held this evening to determine the date of the moon sighting of the holy month of Zilhaj and the date of Eid-ul-Adha. </figcaption>
+  <img src="imgs/e64.jpg" class="figure-img img-fluid rounded" alt="...">
+</figure>
+</div>
+
+</section>
+
+ <section class="separator">
+			<div class="decor-svg">
+				<svg class="decor" height="100%" preserveAspectRatio="none" version="1.1" viewBox="0 0 100 100" width="100%" xmlns="http://www.w3.org/2000/svg">
+</div>
+		</section>
 		<section class="bg-dark">
 			<div class="container">
 				<div class="row p-v m-t-md text-center">
