--- a/portfolio.html
+++ b/portfolio.html
@@ -68,6 +68,8 @@
 		</section>
 
 <section class="bg-white">
+<div class="container">
+   <div class="row">
 <div class="col-sm-3">
 <figure class="figure">
   <img src="imgs/e61.jpg" class="figure-img img-fluid rounded" alt="...">
@@ -96,7 +98,8 @@
   <img src="imgs/e64.jpg" class="figure-img img-fluid rounded" alt="...">
 </figure>
 </div>
-
+</div>
+</div>
 </section>
 
  <section class="separator">
