--- a/portfolio.html
+++ b/portfolio.html
@@ -70,21 +70,21 @@
 <section class="bg-white">
 <div class="container">
    <div class="row">
-<div class="col-sm-3 text-center p-v m-v-xl" >
+<div class="col-sm-3 alert alert-success p-v m-v-xl" >
 <figure class="figure">
   <img src="imgs/e61.jpg" class="img-full img-fluid wrapper-xs rounded" alt="...">
   <figcaption class="figure-caption">Prime Minister Sheikh Hasina presided over the meeting. A meeting of the National Moon Sighting Committee is scheduled to be held this evening to determine the date of the moon sighting of the holy month of Zilhaj and the date of Eid-ul-Adha. </figcaption>
 </figure>
 </div>
 
-<div class="col-sm-3 text-center p-v m-v-xl">
+<div class="col-sm-3 p-v m-v-xl">
 <figure class="figure">
 <figcaption class="figure-caption">Prime Minister Sheikh Hasina presided over the meeting. A meeting of the National Moon Sighting Committee is scheduled to be held this evening to determine the date of the moon sighting of the holy month of Zilhaj and the date of Eid-ul-Adha. </figcaption>
   <img src="imgs/e62.jpg" class="img-full img-fluid wrapper-xs rounded" alt="...">
 </figure>
 </div>
 
-<div class="col-sm-3 text-center p-v m-v-xl">
+<div class="col-sm-3 p-v m-v-xl">
 <figure class="figure">
   <img src="imgs/e63.jpg" class="img-full img-fluid wrapper-xs rounded" alt="...">
   <figcaption class="figure-caption">Prime Minister Sheikh Hasina presided over the meeting. A meeting of the National Moon Sighting Committee is scheduled to be held this evening to determine the date of the moon sighting of the holy month of Zilhaj and the date of Eid-ul-Adha. </figcaption>
@@ -92,7 +92,7 @@
 </div>
 
 
-<div class="col-sm-3 text-center p-v m-v-xl">
+<div class="col-sm-3 p-v m-v-xl">
 <figure class="figure">
 <figcaption class="figure-caption">Prime Minister Sheikh Hasina presided over the meeting. A meeting of the National Moon Sighting Committee is scheduled to be held this evening to determine the date of the moon sighting of the holy month of Zilhaj and the date of Eid-ul-Adha. </figcaption>
   <img src="imgs/e64.jpg" class="img-full img-fluid wrapper-xs rounded" alt="...">
