--- a/gallery.html
+++ b/gallery.html
@@ -176,6 +176,13 @@
 		        <h3 class="text-info">  Sangbad Pratidin</h3>
 				      </a>
 				       <div class="line line-lg w-3x b-b b-danger m-auto"></div> 
+
+
+ <a href="https://epaper.jugantor.com" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/jugantor.com.jpg" alt="" class="img-full wrapper-xs bg-white>
+			                                                         
+		        <h3 class="text-info">E-Jugantor (dot)com</h3>
+				      </a>
+				       <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 </p>
      </div>
     </div>
