--- a/gallery.html
+++ b/gallery.html
@@ -296,6 +296,13 @@
 			                                                         
 		        <h3 class="text-info"> Musammat Samina </h3>
 				      </a>
+
+<div class="line line-lg w-3x b-b b-danger m-auto"></div>
+
+<a href="http://nctb.portal.gov.bd/site/page/45c5a2ef-4587-4ff7-a5a1-e8423b476fe6" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/govtlogo.png" alt="" class="img-full wrapper-xs bg-white>
+			                                                         
+		        <h3 class="text-info"> জাতীয় পাঠ‍্যপুস্তক বই </h3>
+				      </a>
 </p>
 
 				         </div>
