--- a/gallery.html
+++ b/gallery.html
@@ -58,7 +58,9 @@
 </span>
                      
 		        <h3 class="text-info">🎓 আলহাজ্ব মোঃ আব্দুল খালেক এবং মিসেস সুফিয়া বেগম,বাড়ি ৩৫, রোড ০৩, ব্লক সি, সেকশন ১২, পল্লবী, ঢাকা ১২১৬।<br> 
- <span class="text-primary">( Al-hajj Md. Abdul Khalek, Mst. Sufia Begum, House 35(1st floor), Road 03, Block C, Section 12, Mirpur, Pallabi, Dhaka 1216, Bangladesh. ) </span>
+ <span class="text-primary">( Al-hajj Md. Abdul Khalek, Mst. Sufia Begum, House 35(1st floor), Road 03, Block C, Section 12, Mirpur, Pallabi, Dhaka 1216, Bangladesh. ) <br>
+<a href ="mailto:musammatsamina@gmail.com">musammatsamina@gmail.com</a>
+</span>
 </h3>
 		        <span class="m-b-xl text-center p-v m-v-xl"> 
     <a href="#" class="btn btn-warning"> Best of 90es </a>
