--- a/gallery.html
+++ b/gallery.html
@@ -354,7 +354,7 @@
 
 <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 
-<a href="http://gsmarena.com.bd" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/gsmarena.jpg" alt="" class="img-full wrapper-xs bg-white>
+<a href="http://gsmarena.com.bd" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/gsmarena.png" alt="" class="img-full wrapper-xs bg-white>
 			                                                         
 		        <h3 class="text-info"> Buy Mobile </h3>
 				      </a>
