--- a/gallery.html
+++ b/gallery.html
@@ -34,6 +34,11 @@
 		        <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 		      </div>			
 
+<div class="col-sm-12 text-center p-v m-v-xl">
+		      	<img src="imgs/s6.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
+	        <div class="line line-lg w-3x b-b b-danger m-auto"></div>
+</div>	
+
 <div class="col-sm-8 col-sm-offset-2 text-center p-v m-v-xl">
 		      	<div class="prayer" >	
 
@@ -72,6 +77,11 @@
 </div>
 
 <div class="row">
+<div class="col-sm-12 text-center p-v m-v-xl">
+		      	<img src="imgs/s5.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
+	        <div class="line line-lg w-3x b-b b-danger m-auto"></div>
+</div>	
+
   <div class="col-sm-3 text-center p-v m-v-xl">
     <div class="card">
       <div class="card-body">
