--- a/gallery.html
+++ b/gallery.html
@@ -35,7 +35,7 @@
 		      </div>			
 
 <div class="col-sm-12 text-center p-v m-v-xl">
-		      	<img src="imgs/s6.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
+		      	<img src="imgs/s.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
 	        <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 </div>	
 
