--- a/gallery.html
+++ b/gallery.html
@@ -41,15 +41,14 @@
 
 
 <div class="row">
-  <div class="col-sm-4 col-sm-offset-2 text-center p-v m-v-xl">
+  <div class="col-sm-6 text-center p-v m-v-xl">
 		      	<div class="prayer" >	
 <iframe src="https://timesprayer.com/widgets.php?frame=1&amp;lang=en&amp;name=dhaka&amp;avachang=true" style="border: medium none; overflow: hidden; width: 100%; height: 198px;"></iframe>
 
 </div>
-	        <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 </div>	
 </div>          
- <div class="col-sm-4 col-sm-offset-2 text-center p-v m-v-xl">
+ <div class="col-sm-6 text-center p-v m-v-xl">
 											
 <div class="m-b-xl text-center p-v m-v-xl"> 
                               
@@ -71,6 +70,8 @@
 </span>
 </div>
 </div>
+
+div class="line line-lg w-3x b-b b-danger m-auto"></div>
 </div>
 
 <div class="row">
