--- a/gallery.html
+++ b/gallery.html
@@ -41,16 +41,16 @@
 
 
 <div class="row">
-  <div class="col-sm-6 text-center p-v m-v-xl">
+  <div class="col-sm-6 text-center">
 		      	<div class="prayer" >	
 <iframe src="https://timesprayer.com/widgets.php?frame=1&amp;lang=en&amp;name=dhaka&amp;avachang=true" style="border: medium none; overflow: hidden; width: 100%; height: 198px;"></iframe>
 
 </div>
 </div>	
 </div>          
- <div class="col-sm-6 text-center p-v m-v-xl">
+ <div class="col-sm-6 text-center">
 											
-<div class="m-b-xl text-center p-v m-v-xl"> 
+<div class=""> 
                               
 	 <span class="m-b-xl text-center p-v m-v-xl"> 
     <a href="#" class="btn btn-primary"> Best of 60es </a>
@@ -71,7 +71,7 @@
 </div>
 </div>
 
-div class="line line-lg w-3x b-b b-danger m-auto"></div>
+<div class="line line-lg w-3x b-b b-danger m-auto"></div>
 </div>
 
 <div class="row">
