--- a/gallery.html
+++ b/gallery.html
@@ -61,7 +61,7 @@
 </div>
 
 <div class="row">
-<div class="col-sm-12 text-center p-v m-v-xl">
+<div class="col-sm-12 text-center">
 		      	<img src="imgs/s4.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
 	        <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 </div>	
