--- a/gallery.html
+++ b/gallery.html
@@ -262,7 +262,7 @@
 <div class="row">
 
 
-<div class="col-sm-12 text-center p-v m-v-xl">
+<div class="col-sm-12 text-center">
 		      	<img src="imgs/s5.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
 	        <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 </div>	
@@ -327,7 +327,7 @@
 			  </div>
 
 
-<div class="col-sm-4 text-center p-v m-v-xl">
+<div class="col-sm-4 text-center">
 <div class="card">
       <div class="card-body">
         <h5 class="card-title"> Segment Three </h5><br>
