--- a/gallery.html
+++ b/gallery.html
@@ -267,7 +267,7 @@
 	        <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 </div>	
 
-  <div class="col-sm-4 text-center p-v m-v-xl">
+  <div class="col-sm-4 text-center">
     <div class="card">
       <div class="card-body">
         <h5 class="card-title">Segment One</h5><br>
@@ -296,7 +296,7 @@
 				    </div>
 				    </div>
 				    
-<div class="col-sm-4 text-center p-v m-v-xl">
+<div class="col-sm-4 text-center">
 <div class="card">
       <div class="card-body">
         <h5 class="card-title"> Book Segment Two</h5><br>
