--- a/gallery.html
+++ b/gallery.html
@@ -299,7 +299,7 @@
 <div class="col-sm-4 text-center">
 <div class="card">
       <div class="card-body">
-        <h5 class="card-title"> Book Segment Two</h5><br>
+        <h5 class="card-title"> Segment Two</h5><br>
         <p class="card-text">
         
  <a href="https://prothoma.com" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/prothoma.jpg" alt="" class="img-full wrapper-xs bg-white>
