--- a/gallery.html
+++ b/gallery.html
@@ -362,12 +362,12 @@
 <div class="row">
 
 
-<div class="col-sm-12 text-center p-v m-v-xl">
+<div class="col-sm-12 text-center">
 		      	<img src="imgs/s2.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
 	        <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 </div>	
 
-  <div class="col-sm-4 text-center p-v m-v-xl">
+  <div class="col-sm-4 text-center">
     <div class="card">
       <div class="card-body">
         <h5 class="card-title"> Segment One</h5><br>
@@ -382,7 +382,7 @@
 				    </div>
 				    </div>
 				    
-<div class="col-sm-4 text-center p-v m-v-xl">
+<div class="col-sm-4 text-center">
 <div class="card">
       <div class="card-body">
         <h5 class="card-title">  Segment Two</h5><br>
@@ -396,7 +396,7 @@
 				    </div>
 			  </div>
 
-<div class="col-sm-4 text-center p-v m-v-xl">
+<div class="col-sm-4 text-center">
 <div class="card">
       <div class="card-body">
         <h5 class="card-title"> Segment Three </h5><br>
