--- a/portfolio.html
+++ b/portfolio.html
@@ -70,6 +70,11 @@
 <section class="bg-white">
 <div class="container">
    <div class="row">
+
+<div class="col-sm-12 p-v m-v-xl" >
+  <img src="imgs/s7.jpg" class="img-full img-fluid wrapper-xs " alt="...">
+</div>
+
 <div class="col-sm-3 p-v m-v-xl" >
 <figure class="figure">
   <img src="imgs/e61.jpg" class="img-full img-fluid wrapper-xs rounded" alt="...">
