--- a/portfolio.html
+++ b/portfolio.html
@@ -71,9 +71,10 @@
 <div class="container">
    <div class="row">
 
-<div class="col-sm-12 p-v m-v-xl" >
-  <img src="imgs/s7.jpg" class="img-full img-fluid wrapper-xs " alt="...">
-</div>
+<div class="col-sm-12 text-center">
+		      	<img src="imgs/s8.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
+	        <div class="line line-lg w-3x b-b b-danger m-auto"></div>
+</div>	
 
 <div class="col-sm-3 p-v m-v-xl" >
 <figure class="figure">
