--- a/gallery.html
+++ b/gallery.html
@@ -29,14 +29,14 @@
 		      
 <div class="row">
   <div class="col-sm-6 text-center">
-		      	<div class="prayer" >	
+		      	<div class="col-sm-4 prayer" >	
 <iframe src="https://timesprayer.com/widgets.php?frame=1&amp;lang=en&amp;name=dhaka&amp;avachang=true" style="border: medium none; overflow: hidden; width: 100%; height: 198px;"></iframe>
-
-</div>	
-
+</div>
 <div class="col-sm-2 text-center">
 		      	<img src="imgs/silentlearnerqr.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
 </div>          
+</div>	
+
  <div class="col-sm-6 text-center">
 											
 <div class=""> 
