--- a/gallery.html
+++ b/gallery.html
@@ -29,14 +29,12 @@
 		      
 <div class="row">
   <div class="col-sm-6 text-center">
-		      	<div class="col-sm-5 prayer" >	
+		      	<div class="prayer" >	
 <iframe src="https://timesprayer.com/widgets.php?frame=1&amp;lang=en&amp;name=dhaka&amp;avachang=true" style="border: medium none; overflow: hidden; width: 100%; height: 198px;"></iframe>
 </div>
 
 <div class="line line-lg w-3x b-b b-danger m-auto"></div>
-<div class="col-sm-1">
 		      	<img src="imgs/silentlearnerqr.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
-</div>          
 </div>	
 
  <div class="col-sm-6 text-center">
