--- a/gallery.html
+++ b/gallery.html
@@ -32,9 +32,7 @@
 		      	<div class="prayer" >	
 <iframe src="https://timesprayer.com/widgets.php?frame=1&amp;lang=en&amp;name=dhaka&amp;avachang=true" style="border: medium none; overflow: hidden; width: 100%; height: 198px;"></iframe>
 </div>
-
-<div class="line line-lg w-3x b-b b-danger m-auto"></div>
-		      	<img src="imgs/silentlearnerqr.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
+		      	<img src="imgs/silentlearnerqr.jpg" alt="" class="img-thumbnail wrapper-xs bg-white img-fluid">	
 </div>	
 
  <div class="col-sm-6 text-center">
