--- a/gallery.html
+++ b/gallery.html
@@ -54,6 +54,8 @@
     <a href="#" class="btn btn-warning"> Best of 90es </a>
 <a href="#" class="btn btn-danger"> Best of older  </a>
 <a href="#" class="btn btn-success"> Best of newborn </a>
+<br>
+<a href="hajjapp.html" class="btn btn-warning"> E- Hajj App </a>
 </span>
 </div>
 </div>
