--- a/hajjapp.html
+++ b/hajjapp.html
@@ -31,7 +31,7 @@
 		    <div class="row">
 		      <div class="col-sm-8 col-sm-offset-2 text-center p-v m-v-xl">
 		      	<i class="icon-paper-plane text-4x"></i>
-		        <h1 class="text-dark">Life Journey</h1>
+		        <h1 class="text-dark">হজ ব্যবস্থাপনা কার্যক্রম </h1>
 		        <p class="">some awesome tour i've done!</p>
 		        <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 		      </div>			
@@ -43,7 +43,7 @@
 <div class="container">
    <div class="row">
 
-<div class="card" style="width: 18rem;">
+<div class="card col-sm-8">
   <div class="card-body">
     <h5 class="card-title">হজ ব্যবস্থাপনায় মোবাইল অ্যাপ</h5>
     <p class="card-text">ই-হজ ব্যবস্থাপনার ধারাবাহিকতায় ই-হজ মোবাইল অ্যাপটিতে প্রাথমিকভাবে প্রাক-নিবন্ধন ও নিবন্ধন রিফান্ড, নিবন্ধন ও নিবন্ধন রিফান্ড আবেদন সিস্টেমের মাধ্যমে করার ব্যবস্থা করা হয়েছে। পাশাপাশি, ধর্ম বিষয়ক মন্ত্রণালয়ের বিভিন্ন তথ্য এখানে সন্নিবেশিত করা হয়েছে। ফলে, হজযাত্রীগণ এই মোবাইল অ্যাপের মাধ্যমে ঘরে বসেই ভাউচার তৈরি করতে পারবেন। এছাড়া, বর্তমানে ই-হজ ব্যবস্থাপনার বিভিন্ন সেবাও পর্যায়ক্রমে মোবাইল অ্যাপটিতে সংযুক্ত করা হবে। হজ ব্যবস্থাপনার সঙ্গে সংশ্লিষ্ট সরকারি কর্মকর্তা এবং হজ এজেন্সির ইউজারদের জন্য ই-হজ ব্যবস্থাপনার কাজসমূহকে পর্যায়ক্রমে মোবাইল অ্যাপটিতে সংযুক্ত করা হবে।</p>
