--- a/hajjapp.html
+++ b/hajjapp.html
@@ -51,6 +51,36 @@
 <a href="https://play.google.com/store/apps/details?id=com.bat.hmis"><img src="imgs/google-pay-pilgrim-guide.png" alt="" class="img-thumbnail wrapper-xs bg-white img-fluid"></a>
   </div>
 </div>
+
+<div class="col-sm-4">
+
+<table class="table">
+  <thead>
+    <tr>
+      <th scope="col">Number</th>
+      <th scope="col">Name</th>
+      <th scope="col">Link</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td></td>
+      <td><a href="store/"><img src="imgs/pdf.jpg" alt="" class="img-thumbnail wrapper-xs bg-white img-fluid"></a></td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Thornton</td>
+      <td><a href="store/"><img src="imgs/pdf.jpg" alt="" class="img-thumbnail wrapper-xs bg-white img-fluid"></a></td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td colspan="2">Larry the Bird</td>
+      <td><a href="store/"><img src="imgs/pdf.jpg" alt="" class="img-thumbnail wrapper-xs bg-white img-fluid"></a></td>
+    </tr>
+  </tbody>
+</table>
+</div>
 </div>
 </div>
 </section>
