--- a/hajjapp.html
+++ b/hajjapp.html
@@ -67,17 +67,17 @@
   <tbody>
     <tr>
       <th scope="row">1</th>
-      <td></td>
+      <td>প্রাক-নিবন্ধন ফরম</td>
       <td><a href="store/"><img src="imgs/pdf.jpg" alt="" class="img-thumbnail wrapper-xs bg-white img-fluid"></a></td>
     </tr>
     <tr>
       <th scope="row">2</th>
-      <td>Thornton</td>
+      <td>মাহারামসহ হজের নিবন্ধন ফরম</td>
       <td><a href="store/"><img src="imgs/pdf.jpg" alt="" class="img-thumbnail wrapper-xs bg-white img-fluid"></a></td>
     </tr>
     <tr>
       <th scope="row">3</th>
-      <td colspan="2">Larry the Bird</td>
+      <td colspan="2"> 	হজযাত্রী প্রতিস্থাপন ফরম</td>
       <td><a href="store/"><img src="imgs/pdf.jpg" alt="" class="img-thumbnail wrapper-xs bg-white img-fluid"></a></td>
     </tr>
   </tbody>
