--- a/hajjapp.html
+++ b/hajjapp.html
@@ -48,9 +48,9 @@
     <h5 class="card-title">হজ ব্যবস্থাপনায় মোবাইল অ্যাপ</h5>
     <p class="card-text lead">ই-হজ ব্যবস্থাপনার ধারাবাহিকতায় ই-হজ মোবাইল অ্যাপটিতে প্রাথমিকভাবে প্রাক-নিবন্ধন ও নিবন্ধন রিফান্ড, নিবন্ধন ও নিবন্ধন রিফান্ড আবেদন সিস্টেমের মাধ্যমে করার ব্যবস্থা করা হয়েছে। পাশাপাশি, ধর্ম বিষয়ক মন্ত্রণালয়ের বিভিন্ন তথ্য এখানে সন্নিবেশিত করা হয়েছে। ফলে, হজযাত্রীগণ এই মোবাইল অ্যাপের মাধ্যমে ঘরে বসেই ভাউচার তৈরি করতে পারবেন। এছাড়া, বর্তমানে ই-হজ ব্যবস্থাপনার বিভিন্ন সেবাও পর্যায়ক্রমে মোবাইল অ্যাপটিতে সংযুক্ত করা হবে। হজ ব্যবস্থাপনার সঙ্গে সংশ্লিষ্ট সরকারি কর্মকর্তা এবং হজ এজেন্সির ইউজারদের জন্য ই-হজ ব্যবস্থাপনার কাজসমূহকে পর্যায়ক্রমে মোবাইল অ্যাপটিতে সংযুক্ত করা হবে।</p>
 
-   <a href="https://apps.apple.com/pk/app/ehaj/id1625546283" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/apple-store-logo.png" alt="" class="img-full wrapper-xs bg-white>
+   <a href="https://apps.apple.com/pk/app/ehaj/id1625546283" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/apple-store-logo.png" alt="" class="img-full wrapper-xs bg-white">
     
-<a href="https://play.google.com/store/apps/details?id=com.bat.hmis"><img src="imgs/google-pay-pilgrim-guide.png" alt="" class="img-thumbnail wrapper-xs bg-white img-fluid"></a>
+<a href="https://play.google.com/store/apps/details?id=com.bat.hmis"><img src="imgs/google-pay-pilgrim-guide.png" alt="" class="img-full wrapper-xs bg-white"></a>
   </div>
 </div>
 
@@ -68,17 +68,17 @@
     <tr>
       <th scope="row">1</th>
       <td>প্রাক-নিবন্ধন ফরম</td>
-      <td><a href="store/"><img src="imgs/pdf.png" alt="" class="img-thumbnail wrapper-xs bg-white img-fluid"></a></td>
+      <td><a href="docs/efile1.pdf"><img src="imgs/pdf.png" alt="" class="img-full wrapper-xs bg-white"></a></td>
     </tr>
     <tr>
       <th scope="row">2</th>
       <td>মাহারামসহ হজের নিবন্ধন ফরম</td>
-      <td><a href="store/"><img src="imgs/pdf.png" alt="" class="img-thumbnail wrapper-xs bg-white img-fluid"></a></td>
+      <td><a href="docs/efile1.pdf"><img src="imgs/pdf.png" alt="" class="img-full wrapper-xs bg-white"></a></td>
     </tr>
     <tr>
       <th scope="row">3</th>
       <td colspan="2"> 	হজযাত্রী প্রতিস্থাপন ফরম</td>
-      <td><a href="store/"><img src="imgs/pdf.png" alt="" class="img-thumbnail wrapper-xs bg-white img-fluid"></a></td>
+      <td><a href="docs/efile1.pdf"><img src="imgs/pdf.png" alt="" class="img-full wrapper-xs bg-white"></a></td>
     </tr>
   </tbody>
 </table>
