--- a/gallery.html
+++ b/gallery.html
@@ -55,7 +55,7 @@
 <a href="#" class="btn btn-danger"> Best of older  </a>
 <a href="#" class="btn btn-success"> Best of newborn </a>
 <br><br>
-<a href="hajjapp.html" class="btn btn-primary"> E- Hajj App </a>
+<a href="hajjapp.html" class="btn btn-primary"> E- Hajj Information</a>
 </span>
 </div>
 </div>
