--- a/hajjapp.html
+++ b/hajjapp.html
@@ -56,6 +56,8 @@
 
 <div class="col-sm-7">
 
+<img src="imgs/ph1.jpg" alt="" class="img-full wrapper-xs bg-white">
+<br>
 <table class="table">
   <thead>
     <tr>
