--- a/hajjapp.html
+++ b/hajjapp.html
@@ -50,7 +50,7 @@
 
    <a href="https://apps.apple.com/pk/app/ehaj/id1625546283" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/apple-store-logo.png" alt="" class="img-full wrapper-xs bg-white">
     
-<a href="https://play.google.com/store/apps/details?id=com.bat.hmis"><img src="imgs/google-pay-pilgrim-guide.png" alt="" class="img-full wrapper-xs bg-white"></a>
+<a href="https://play.google.com/store/apps/details?id=com.bat.hmis"><img src="imgs/google-pay-pilgrim-guide.png" alt="" class="img-full wrapper-xs"></a>
   </div>
 </div>
 
@@ -70,17 +70,17 @@
     <tr>
       <th scope="row">1</th>
       <td>প্রাক-নিবন্ধন ফরম</td>
-      <td><a href="docs/efile1.pdf"><img src="imgs/pdf.png" alt="" class="img-full wrapper-xs bg-white"></a></td>
+      <td><a href="docs/efile1.pdf"><img src="imgs/pdf.png" alt="" class="img-full wrapper-xs"></a></td>
     </tr>
     <tr>
       <th scope="row">2</th>
       <td>মাহারামসহ হজের নিবন্ধন ফরম</td>
-      <td><a href="docs/efile2.pdf"><img src="imgs/pdf.png" alt="" class="img-full wrapper-xs bg-white"></a></td>
+      <td><a href="docs/efile2.pdf"><img src="imgs/pdf.png" alt="" class="img-full wrapper-xs"></a></td>
     </tr>
     <tr>
       <th scope="row">3</th>
       <td colspan="2"> 	হজযাত্রী প্রতিস্থাপন ফরম</td>
-      <td><a href="docs/efile3.pdf"><img src="imgs/pdf.png" alt="" class="img-full wrapper-xs bg-white"></a></td>
+      <td><a href="docs/efile3.pdf"><img src="imgs/pdf.png" alt="" class="img-full wrapper-xs"></a></td>
     </tr>
   </tbody>
 </table>
