--- a/hajjapp.html
+++ b/hajjapp.html
@@ -50,7 +50,7 @@
 
    <a href="https://apps.apple.com/pk/app/ehaj/id1625546283" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/apple-store-logo.png" alt="" class="img-full wrapper-xs bg-white">
     
-<a href="https://play.google.com/store/apps/details?id=com.bat.hmis"><img src="imgs/google-pay-pilgrim-guide.png" alt="" class="img-full wrapper-xs"></a>
+<a href="https://play.google.com/store/apps/details?id=com.bat.hmis" class="thumb-lg m-t-n-lg m-r-n-lg"><img src="imgs/google-pay-pilgrim-guide.png" alt="" class="img-full wrapper-xs bg-white></a>
   </div>
 </div>
 
