--- a/hajjapp.html
+++ b/hajjapp.html
@@ -70,17 +70,17 @@
     <tr>
       <th scope="row">1</th>
       <td>প্রাক-নিবন্ধন ফরম</td>
-      <td><a href="docs/efile1.pdf"><img src="imgs/pdf.png" alt="" class="img-full wrapper-xs"></a></td>
+      <td><a href="docs/efile1.pdf" class="thumb-lg m-t-n-lg m-r-n-lg"><img src="imgs/pdf.png" alt="" class="img-full wrapper-xs"></a></td>
     </tr>
     <tr>
       <th scope="row">2</th>
       <td>মাহারামসহ হজের নিবন্ধন ফরম</td>
-      <td><a href="docs/efile2.pdf"><img src="imgs/pdf.png" alt="" class="img-full wrapper-xs"></a></td>
+      <td><a href="docs/efile2.pdf" class="thumb-lg m-t-n-lg m-r-n-lg"><img src="imgs/pdf.png" alt="" class="img-full wrapper-xs"></a></td>
     </tr>
     <tr>
       <th scope="row">3</th>
       <td colspan="2"> 	হজযাত্রী প্রতিস্থাপন ফরম</td>
-      <td><a href="docs/efile3.pdf"><img src="imgs/pdf.png" alt="" class="img-full wrapper-xs"></a></td>
+      <td><a href="docs/efile3.pdf" class="thumb-lg m-t-n-lg m-r-n-lg"><img src="imgs/pdf.png" alt="" class="img-full wrapper-xs"></a></td>
     </tr>
   </tbody>
 </table>
