--- a/hajjapp.html
+++ b/hajjapp.html
@@ -54,7 +54,8 @@
   </div>
 </div>
 
-<div class="col-sm-4">
+<div class="card col-sm-6">
+  <div class="card-body">
 <br>
 <img src="imgs/ph1.jpg" alt="" class="img-full wrapper-xs bg-white">
 <br>
@@ -84,6 +85,7 @@
     </tr>
   </tbody>
 </table>
+</div>
 </div>
 </div>
 </div>
