--- a/gallery.html
+++ b/gallery.html
@@ -65,7 +65,7 @@
 
 <div class="row">
 <div class="col-sm-12 text-center">
-		      	<img src="imgs/s4.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
+		      	<img src="imgs/sheikh_hasina.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
 	        <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 </div>	
 
@@ -370,6 +370,13 @@
 <a href="http://gsmarena.com.bd" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/gsmarena.png" alt="" class="img-full wrapper-xs bg-white>
 			                                                         
 		        <h3 class="text-info"> Buy Mobile </h3>
+				      </a>
+
+<div class="line line-lg w-3x b-b b-danger m-auto"></div>
+
+<a href="http://basis.org.bd" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/basis.png" alt="" class="img-full wrapper-xs bg-white>
+			                                                         
+		        <h3 class="text-info"> Basis ICT Sector </h3>
 				      </a>
 </p>
 				         </div>
