--- a/gallery.html
+++ b/gallery.html
@@ -335,7 +335,7 @@
 
 <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 
-<a href="https://a2i.gov.bd" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/a2i.png" alt="" class="img-full wrapper-xs bg-white>
+<a href="https://a2i.gov.bd" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/a2i.jpg" alt="" class="img-full wrapper-xs bg-white>
 			                                                         
 		    <h3 class="text-info"> A2i Government Ict </h3>
 				      </a>
