--- a/gallery.html
+++ b/gallery.html
@@ -266,7 +266,7 @@
 
 
 <div class="col-sm-12 text-center">
-		      	<img src="imgs/s5.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
+		      	<img src="imgs/s11.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
 	        <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 </div>	
 
@@ -435,6 +435,11 @@
 				         </div>
 				    </div>
 			  </div>
+
+<div class="col-sm-12 text-center">
+		      	<img src="imgs/s5.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
+	        <div class="line line-lg w-3x b-b b-danger m-auto"></div>
+</div>	
 		 </div>
 		</section>
 <section class="separator">
