--- a/gallery.html
+++ b/gallery.html
@@ -70,6 +70,7 @@
 </div>	
 
   <div class="col-sm-3 text-center">
+<div class="line line-lg w-3x b-b m-auto"></div>
     <div class="card">
       <div class="card-body">
         <h5 class="card-title"> Segment One 🗞</h5> 
