--- a/gallery.html
+++ b/gallery.html
@@ -425,8 +425,8 @@
 
 
 <div class="col-sm-12 text-center">
-		      	<img src="imgs/s2.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
-	        <div class="line line-lg w-3x b-b b-danger m-auto"></div>
+		      	<img src="imgs/s12.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
+	        <div class="line line-lg w-3x b-b m-auto"></div>
 </div>	
 
   <div class="col-sm-4 text-center">
@@ -472,8 +472,8 @@
 				    </div>
 			  </div>
 
-<div class="col-sm-12 text-center">
-		      	<img src="imgs/s5.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
+<div class="col-sm-12 text-center m-v p-v-xl">
+		      	<img src="imgs/s13.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
 	        <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 </div>	
 		 </div>
