--- a/gallery.html
+++ b/gallery.html
@@ -424,7 +424,7 @@
 <div class="row">
 
 
-<div class="col-sm-12 text-center">
+<div class="col-sm-12 text-center m-v p-v-xl">
 		      	<img src="imgs/s12.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
 	        <div class="line line-lg w-3x b-b m-auto"></div>
 </div>	
