--- a/gallery.html
+++ b/gallery.html
@@ -280,7 +280,7 @@
 	        <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 </div>	
 
-  <div class="col-sm-4 text-center">
+  <div class="col-sm-3 text-center">
     <div class="card">
       <div class="card-body">
         <h5 class="card-title">Segment One 🗞</h5>
@@ -332,7 +332,7 @@
 				    </div>
 				    </div>
 				    
-<div class="col-sm-4 text-center">
+<div class="col-sm-3 text-center">
 <div class="card">
       <div class="card-body">
         <h5 class="card-title"> Segment Two 🗞</h5>
@@ -373,7 +373,7 @@
 			  </div>
 
 
-<div class="col-sm-4 text-center">
+<div class="col-sm-3 text-center">
 <div class="card">
       <div class="card-body">
         <h5 class="card-title"> Segment Three 🗞 </h5>
@@ -418,6 +418,19 @@
 				         </div>
 				    </div>
 			  </div> 
+
+<div class="col-sm-3 text-center">
+<div class="card">
+      <div class="card-body">
+        <h5 class="card-title"> Segment Four 🗞 </h5>
+
+<div class="line line-lg w-3x b-b m-auto"></div>
+        <p class="card-text">
+<img src="imgs/qr1.jpg" alt="" class="img-full wrapper-xs bg-white>
+</p>
+</div>
+</div>
+</div>
 
 		 </div>
 
