--- a/gallery.html
+++ b/gallery.html
@@ -419,24 +419,22 @@
 				    </div>
 			  </div> 
 
-<div class="col-sm-3 text-center">
+<div class="col-sm-3 text-center m-v p-v-xl">
 <div class="card">
       <div class="card-body">
         <h5 class="card-title"> Segment Four 🗞 </h5>
 
 <div class="line line-lg w-3x b-b m-auto"></div>
+
         <p class="card-text">
 <img src="imgs/qr1.jpg" alt="" class="img-full wrapper-xs bg-white>
 </p>
 </div>
 </div>
 </div>
-
-<div class="line line-lg w-3x b-b m-auto"></div></div>
 		 </div>
 
 <div class="row">
-
 
 <div class="col-sm-12 text-center m-v p-v-xl">
 		      	<img src="imgs/s12.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
