--- a/gallery.html
+++ b/gallery.html
@@ -418,7 +418,7 @@
 				    </div>
 			  </div> 
 
-<div class="col-sm-3 text-center m-v p-v-xl">
+<div class="col-sm-3 text-center">
 <div class="card">
       <div class="card-body">
         <h5 class="card-title"> Segment Four 🗞 </h5>
