--- a/gallery.html
+++ b/gallery.html
@@ -427,6 +427,8 @@
 
         <p class="card-text">
 <img src="imgs/qr1.jpg" alt="" class="img-full wrapper-xs bg-white>
+
+<div class="line line-lg w-3x b-b m-auto"></div>
 </p>
 </div>
 </div>
