--- a/poem.html
+++ b/poem.html
@@ -92,6 +92,11 @@
 <div class="item"><img src="imgs/p45.jpg" alt=""></div>
 <div class="item"><img src="imgs/p46.jpg" alt=""></div>
 <div class="item"><img src="imgs/p47.jpg" alt=""></div>
+<div class="item"><img src="imgs/p48.jpg" alt=""></div>
+<div class="item"><img src="imgs/p49.jpg" alt=""></div>
+<div class="item"><img src="imgs/p50.jpg" alt=""></div>
+<div class="item"><img src="imgs/p51.jpg" alt=""></div>
+<div class="item"><img src="imgs/p52.jpg" alt=""></div>
 </div>
 </div>
 </section>
