--- a/poem.html
+++ b/poem.html
@@ -42,6 +42,14 @@
 <section>
 <div class="container">
    <div class="row">
+
+<div class="col-sm-12 text-center">
+
+<div class="line line-lg w-3x b-b m-auto"></div>
+		      	<img src="imgs/meena.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
+	   
+<div class="line line-lg w-3x b-b m-auto"></div>
+</div>	
 <div class="owl-carousel owl-theme">
     <div class="item"><img src="imgs/p1.jpg" alt="Jahangir Gate"></div>
     <div class="item"><img src="imgs/p2.jpg" alt="Bangladesh Army Stadium"></div>
