--- a/gallery.html
+++ b/gallery.html
@@ -452,6 +452,13 @@
 			                                                         
 		        <h3 class="text-info"> Shajgoj </h3>
 				      </a>
+
+<div class="line line-lg w-3x b-b b-danger m-auto"></div>
+
+<a href="" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/aciseed.jpg" alt="" class="img-full wrapper-xs bg-white>
+			                                                         
+		    <h3 class="text-info"> ACI Seed Agro </h3>
+				      </a>				
 				       </p>
 				       </div>
 				    </div>
