--- a/hajjapp.html
+++ b/hajjapp.html
@@ -56,7 +56,7 @@
 </div>
 </div>
 <div class="col-sm-6">
-<img src="imgs/hajj.jpg" alt="" class="img-full wrapper-xs bg-white">
+<img src="imgs/ph1.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">
 </div>
 </div>
 </div>
