--- a/gallery.html
+++ b/gallery.html
@@ -368,7 +368,7 @@
 
 <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 
-<a href="http://shop.alharamainperfumes.com/bangladesh/" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/perfumes.jpg" alt="" class="img-full wrapper-xs bg-white>
+<a href="http://shop.alharamainperfumes.com/bangladesh/" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/perfumes.png" alt="" class="img-full wrapper-xs bg-white>
 			                                                         
 		    <h3 class="text-info"> Al Haramain Perfumes </h3>
 				      </a>
