--- a/gallery.html
+++ b/gallery.html
@@ -326,7 +326,13 @@
 			                                                         
 		    <h3 class="text-info">  E-tin Registration </h3>
 				      </a>			
-				       </p>
+
+<div class="line line-lg w-3x b-b b-danger m-auto"></div>
+
+<a href="https://sundarbancourierltd.com" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/sundarban.jpg" alt="" class="img-full wrapper-xs bg-white>
+			                                                         
+		    <h3 class="text-info"> SundarBan Courier  Service </h3>
+				      </a>							       </p>
 				       </div>
 				    </div>
 				    </div>
