--- a/gallery.html
+++ b/gallery.html
@@ -56,6 +56,8 @@
 <a href="#" class="btn btn-success"> Best of newborn </a>
 <br><br>
 <a href="hajjapp.html" class="btn btn-primary"> E- Hajj Information</a>
+<br><br>
+<a href="mcq.html" class="btn btn-primary"> MCQ </a>
 </span>
 </div>
 </div>
