--- a/gallery.html
+++ b/gallery.html
@@ -457,6 +457,13 @@
 <a href="https://artlandbdltd.com" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/artlandbd.jpg" alt="" class="img-full wrapper-xs bg-white>
 			                                                         
 		    <h3 class="text-info"> Artland BD </h3>
+				      </a>	
+		
+<div class="line line-lg w-3x b-b b-danger m-auto"></div>
+
+<a href="https://www.facebook.com/Cumillaandkhadi?mibextid=ZbWKwL" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/cumillaandkhadi.jpg" alt="" class="img-full wrapper-xs bg-white>
+			                                                         
+		    <h3 class="text-info"> Cumillar Khadi - কুমিল্লার খাদি </h3>
 				      </a>			
 </p>
 				         </div>
